20304
```scala
class Yo[Unused] {
  def yo(hasDefault: Any = ""): String = ""
}

class MacroNotExpanded {
  implicit def toYo[Unused](a: Any)(implicit ct: reflect.ClassTag[Unused]): Yo[Unused] = new Yo[Unused]
   "".yo()  
}
```
```
/Users/jz/code/scratch/src/main/scala/Main.scala:7: error: macro has not been expanded
   "".yo()
   ^
one error found
```


Same symptom and similar causes to scala/bug#7987
